TabzPane is now created with an fxml file

--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,18 @@ apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'checkstyle'
 
-sourceCompatibility = 1.8
+allprojects {
+    apply plugin: 'java'
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
+}
+
+compileJava {
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
+}
+
+
 
 repositories {
     mavenCentral()
